Фронт обновлен для ии генераций
